# moai-lua-tests

./: .gitignore  CMakeLists.txt  README  README.md  main.lua
cmake/: macros.cmake  runner-win.c.in  runner.c.in  test-runner-win.c.in  test-runner.c.in
data/: config.json
lib/: auto.c  tools.c
lib/auto/: auto.h  impl.h  tools.h
lib/impl/: osx.c  win.c
src/: main.lua
src/demo/: Main.lua  config.lua.in  platform.lua  terminal.lua
src/helpers/: test.lua
src/n/: Debug.lua  Log.lua  module.lua  terminal.lua  test.lua
src/n/assets/: Asset.lua  AssetManager.lua  iLoader.lua  jsonLoader.lua
tests/assets/: AssetManagerTests.lua  AssetTests.lua  CMakeLists.txt  test.lua.in
tests/fails/: CMakeLists.txt  test.lua.in  tests.lua
tests/log/: CMakeLists.txt  TargetTests.lua  test.lua.in
tests/template/: CMakeLists.txt  junk.lua  test.lua  test.lua.in  tests.lua
tests/terminal/: CMakeLists.txt  example.lua  test.lua.in  tests.lua
tests/tests/: CMakeLists.txt  example.lua  test.lua.in
